...
// AUTOMATED TESTS THAT SEARCH FOR THESE TAGS.
//
// PLEASE UPDATE YOUR TESTS ACCORDINGLY!
//
// ////////////////////////////////

const val CAPTURE_BUTTON = "CaptureButton"
const val CAPTURE_MODE_TOGGLE_BUTTON = "CaptureModeToggleButton"
const val FLIP_CAMERA_BUTTON = "FlipCameraButton"
const val IMAGE_CAPTURE_SUCCESS_TAG = "ImageCaptureSuccessTag"
const val IMAGE_CAPTURE_FAILURE_TAG = "ImageCaptureFailureTag"
const val IMAGE_CAPTURE_EXTERNAL_UNSUPPORTED_TAG = "ImageCaptureExternalUnsupportedTag"
const val IMAGE_CAPTURE_UNSUPPORTED_CONCURRENT_CAMERA_TAG =
...
